Hooked up the new Minecraft launching system.
Hooked up the new authentication system.

Removed some unused startup paramaters, and the relaunch mechanism due to the way Minecraft is now launched.

Signed-off-by: Dalton Pelc <daltonjpelc@gmail.com>