@@ -54,8 +54,6 @@ public final class StartupParameters {
 	private String proxyUser = null;
 	@Parameter(names = {"-proxy_password"}, description = "HTTP Proxy Password")
 	private String proxyPassword = null;
-	@Parameter(names = {"-relaunched"}, description = "Used to indicate the process has been relaunched for the property memory arguments")
-	private boolean relaunched = false;
 	@Parameter(names = {"-console"}, description = "Shows the console window")
 	private boolean console = false;
 	@Parameter(names = {"-width"}, description = "Sets the width of the minecraft window to be fixed to this.")
@@ -104,9 +102,6 @@ public final class StartupParameters {
 		if (proxyPassword != null) {
 			log.info("Proxy Password exists");
 		}
-		if (relaunched) {
-			log.info("Relaunched with correct memory");
-		}
 		if (console) {
 			log.info("Console frame enabled");
 		}
@@ -123,157 +118,6 @@ public final class StartupParameters {
 			log.info("Forced solder pack rest: " + solderRest);
 		}
 		log.info("--------- End of Startup Parameters ---------");
-	}
-
-	public boolean hasAccount() {
-		return user != null && user.length() > 0 && pass != null && pass.length() > 0;
-	}
-
-	public boolean relaunch(Logger log, boolean force) {
-		if (shouldRelaunch() || force) {
-			String pathToJar;
-			File jar = new File(SpoutcraftLauncher.class.getProtectionDomain().getCodeSource().getLocation().getFile());
-			try {
-				pathToJar = jar.getCanonicalPath();
-			} catch (IOException e1) {
-				pathToJar = jar.getAbsolutePath();
-			}
-			try {
-				pathToJar = URLDecoder.decode(pathToJar, "UTF-8");
-			} catch (java.io.UnsupportedEncodingException ignore) {
-			}
-
-			final int memory = Memory.getMemoryFromId(Settings.getMemory()).getMemoryMB();
-			log.info("Attempting relaunch with " + memory + " mb of RAM");
-			log.info("Path to Launcher Jar: " + pathToJar);
-
-			ProcessBuilder processBuilder = new ProcessBuilder();
-			ArrayList<String> commands = new ArrayList<String>();
-			if (OperatingSystem.getOperatingSystem().equals(OperatingSystem.WINDOWS)) {
-				commands.add("javaw");
-			} else if (OperatingSystem.getOperatingSystem().equals(OperatingSystem.OSX)) {
-				commands.add("java");
-				commands.add("-Xdock:name=\"Technic Launcher\"");
-			} else {
-				commands.add("java");
-			}
-			commands.add("-Xmx" + memory + "m");
-			int permSize = 128;
-			if (memory >= 2048) {
-				permSize = 256;
-			}
-			log.info("Attempting relaunch with " + "-XX:MaxPermSize=" + permSize + "m" + " as permgen");
-			commands.add("-XX:MaxPermSize=" + permSize + "m");
-			commands.add("-cp");
-			commands.add(pathToJar);
-			commands.add(SpoutcraftLauncher.class.getName());
-			commands.addAll(getRelaunchParameters());
-			commands.add("-relaunched");
-			processBuilder.command(commands);
-
-			try {
-				processBuilder.start();
-				return true;
-			} catch (IOException e) {
-				e.printStackTrace();
-			}
-		}
-		return false;
-	}
-
-	private boolean shouldRelaunch() {
-		if (relaunched) {
-			return false;
-		}
-		int mb = (int) (Runtime.getRuntime().maxMemory() / 1024 / 1024);
-		int min = Memory.getMemoryFromId(Settings.getMemory()).getMemoryMB();
-		return mb < min;
-	}
-
-	private List<String> getRelaunchParameters() {
-		List<String> params = new ArrayList<String>();
-		if (user != null) {
-			params.add("-username");
-			params.add(user);
-		}
-		if (pass != null) {
-			params.add("-password");
-			params.add(pass);
-		}
-		if (server != null) {
-			params.add("-server");
-			params.add(server);
-		}
-		if (portable) {
-			params.add("-portable");
-		}
-		if (debug) {
-			params.add("-debug");
-		}
-		if (proxyHost != null) {
-			params.add("-proxy_host");
-			params.add(proxyHost);
-		}
-		if (proxyPort != null) {
-			params.add("-proxy_port");
-			params.add(proxyPort);
-		}
-		if (proxyUser != null) {
-			params.add("-proxy_user");
-			params.add(proxyUser);
-		}
-		if (proxyPassword != null) {
-			params.add("-proxy_password");
-			params.add(proxyPassword);
-		}
-		if (console) {
-			params.add("-console");
-		}
-		if (width != -1) {
-			params.add("-width");
-			params.add(Integer.toString(width));
-		}
-		if (height != -1) {
-			params.add("-height");
-			params.add(Integer.toString(height));
-		}
-		if (solderPack != null) {
-			params.add("-solderpack");
-			params.add(solderPack);
-		}
-		if (solderRest != null) {
-			params.add("-solderrest");
-			params.add(solderRest);
-		}
-		return params;
-	}
-
-	public String getUser() {
-		return user;
-	}
-
-	public String getPass() {
-		return pass;
-	}
-
-	public String getServer() {
-		if (server == null) {
-			return null;
-		}
-		if (server.contains(":")) {
-			return server.substring(0, server.indexOf(":"));
-		}
-		return server;
-	}
-
-	public String getPort() {
-		if (server == null) {
-			return null;
-		}
-		if (server.contains(":")) {
-			return server.substring(server.indexOf(":") + 1);
-		}
-		return null;
 	}
 
 	public boolean isPortable() {
